codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  PermissionRequest hooks                                                                                       
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Admin managed Hook 1 - System Config                                                                      
                                                                                                                
  Event     PermissionRequest                                                                                   
  Matcher   Bash                                                                                                
  File      /tmp/hooks.json                                                                                     
  Command   /enterprise/hooks/permission-check.sh                                                               
  Timeout   30s                                                                                                 
                                                                                                                
  Admin managed; press esc to go back
